--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,9 @@
 body {
     font-family: "Roboto", sans-serif;
     font-size: 48px;
+    margin: 0;
     padding: 0;
-    background-color: #1F2937;
+    color: white;
     display: flex;
     flex-direction: column;
 }
@@ -10,13 +11,201 @@ body {
 .header {
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    padding: 16px 48px;
+    justify-content: space-around;
+    padding: 16px 16px;
+    background-color: #1F2937;
+}
+
+.hero-text{
+    display: flex;
+    padding: 96px 150px;
+    background-color: #1F2937;
+    gap: 40px;
+    /* flex-wrap: wrap; */
+    justify-content: center;
+
+}
+
+.hero-main {
+    font-size: 48px;
+    font-weight: 900;
+    color: #f9faf8;
+
+    
+}
+
+.hero-content {
+    display: flex;
+    flex-shrink: 2;
+    flex-direction: column;
+    gap: 10px;
+    flex-basis: 500px;
+}
+
+
+
+.image-blocks {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 50px;
+    flex-wrap: wrap; 
+    flex-grow: 1;
+}
+
+.image-block {
+    flex-shrink: 1;
+    font-size: 18px;
+    color: #58585a;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    max-width: 175px;
+    
+    
+   
+}
+
+.image-block > img {
+    border-style: solid;
+    border-color:#3882f6;
+    border-radius: 8px;
+    border-width: 3px;
+    max-width: 150px;
+    
+    
+
+}
+
+.info {
+    padding: 80px 20px;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+}
+
+.info-header {
+    font-size: 36px;
+    font-weight: 900;
+    color: #1F2937
 }
 
 .logo {
     color: #f9faf8;
     font-size: 24px;
+    font-weight: 900;
+}
+
+
+.placeholder {
+    flex: 1;
+    background-color: gray;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: small;
+    min-width: 250px;
+    flex-basis: 400px;
+    max-width: 600px;
+    min-height: 200px;
+    
+    
+}
+
+.quote-section {
+    background-color: #e5e7eb;
+    padding: 100px 200px;
+    display: flex;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.quote-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 1500px;
+}
+
+.quote {
+    font-size: 36px;
+    font-style: italic;
+    font-weight: 300;
+    color: #1F2937;
+    max-width: 1200px;
+    
+}
+
+.attribution {
+    align-self: flex-end;
+    font-weight: bold;
+    font-size: 24px;
+    max-width: 1200px;
+    color: #1F2937;
+
+}
+
+.action {
+    margin-top: 100px;
+    margin-bottom: 100px;
+    background-color: #3882f6;
+    display: flex;
+    justify-content: center;
+    border-radius: 16px;
+    padding: 0 100px;
+    align-self: center;
+}
+
+
+.action-content {
+    flex: 1;
+    display: flex;
+    align-items: flex-end;
+    padding: 40px;
+    gap: 100px;
+}
+
+.action-content div{
+    display: flex;
+    flex-direction: column;
+    padding: 40px;
+    margin: 0;
+    padding: 0;
+}
+
+.action-header {
+    font-weight: 500;
+    font-size: 28px;
+}
+
+.action-text {
+    font-weight: 300;
+    font-size: 18px;
+}
+
+.action-header, .action-text {
+    margin: 0;
+}
+
+.action-button {
+    border-radius: 8px;
+    border: solid;
+    border-color: #e5e7eb;
+    border-width: 2px;
+    padding: 10px 30px;
+}
+
+.footer {
+    background-color: #1F2937;
+    padding: 50px;
+    text-align: center;
+    font-size: 18px;
 }
 
 ul, li {
@@ -29,6 +218,22 @@ ul, li {
 
 a {
     text-decoration: none;
+}
+
+button {
+
+    background-color: #3882f6;
+    border: none;
+    padding: 10px 20px;
+    color: #e5e7eb;
+    font-weight: bold;
+    border-radius: 8px;
+    align-self: flex-start;
+    font-size: 20px;
+
+}
+
+a, .second {
     color: #e5e7eb;
     font-size: 18px;
 }
